Fix padding for 'Best Tile' box on small screens

--- a/style/main.scss
+++ b/style/main.scss
@@ -530,8 +530,16 @@ hr {
   .best-tile-container,
   .best-container {
     margin-top: 0;
-    padding: 15px 10px;
     min-width: 40px;
+  }
+
+  .score-container,
+  .best-container {
+    padding: 15px 10px;
+  }
+
+  .best-tile-container {
+    padding: 15px 20px;
   }
 
   .heading {
